se actualizo el index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="boton__desencriptar " onclick="btnDesencriptar();" >Desencriptar</button>
             </div>
             <div class="seccion1__boton2">
-                <button class="boton__reiniciar" onclick="btnreiniciar();" >Reiniciar</button>
+                <button class="boton__reiniciar" id="boton__reiniciar" onclick="btnreiniciar();" >Reiniciar</button>
             </div>
         </section >
         <section class="seccion2">
